# kernel-io

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md
cmake/: CompilerWarnings.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  StandardProjectSettings.cmake  StaticAnalysers.cmake
src/: CMakeLists.txt
src/epoll/: CMakeLists.txt
src/kqueue/: CMakeLists.txt  main.cpp
src/simple/: CMakeLists.txt  main.cpp
src/uring/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
